--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@ body
 {
 background-image:url('./images/kuva01.jpg');
 background-repeat:repeat-x;
-background-color:#ffffff;
+background-color:#e1c699;
 border:0;
 padding:0;
 margin:0;
